--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "third_party"]
-	path = third_party
-	url = https://github.com/libsdl-org/SDL.git
-[submodule "third_party/SDL"]
-	path = third_party/SDL
-	url = https://github.com/libsdl-org/SDL.git
+[submodule "Font"]
+	path = Font
+	url = https://github.com/JoranVandenbroucke/DeerFont.git
