--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -33,6 +33,17 @@ jobs:
           sudo ./llvm.sh 18 all
           sudo apt-get install -y clang-tools-18  # Ensure clang-scan-deps is installed
 
+      - name: Download Vulkan SDK
+        run: |
+          wget -qO- https://sdk.lunarg.com/sdk/download/1.3.275.0/linux/vulkan_sdk.tar.gz | tar -xz -C ${{runner.workspace}}/VulkanSDK
+
+      - name: Copy Vulkan SDK folders
+        run: |
+          mkdir -p ${{runner.workspace}}/3rdParty/Vulkan
+          cp -r ${{runner.workspace}}/VulkanSDK/1.3.275.0/x86_64/include ${{runner.workspace}}/3rdParty/Vulkan/include
+          cp -r ${{runner.workspace}}/VulkanSDK/1.3.275.0/x86_64/lib ${{runner.workspace}}/3rdParty/Vulkan/libraries
+          cp -r ${{runner.workspace}}/VulkanSDK/1.3.275.0/x86_64/bin ${{runner.workspace}}/3rdParty/Vulkan/binaries
+
       - name: Configure CMake
         env:
           CC: ${{matrix.cc}}
